--- a/_includes/nuvlabox_intro.html
+++ b/_includes/nuvlabox_intro.html
@@ -1,11 +1,9 @@
 <div class="banner">
-  <div>
-    <a href="/jobs/index.html">We're hiring!</a>
   </div>
 </div>
 <div class="jumbotron top_product nuvlabox">
   <div class="container">
     <h1>NuvlaBox</h1>
-    <p>Bridging the digital divide with an affordable cloud-in-a-box that's child's play to use and manage</p>
+    <p>A portable cloud-in-a-box that's child's play to use and manage</p>
   </div>
 </div>
