--- a/_includes/top.html
+++ b/_includes/top.html
@@ -16,8 +16,8 @@
         <li id="nav-products" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/products/slipstream/slipstream.html"><b>SlipStream&reg;</b>: Multi-cloud management platform</a></li>
-            <li><a href="/products/nuvlabox/nuvlabox.html"><b>NuvlaBox&reg;</b>: Cloud-in-a-box appliance</a></li>
+            <li><a href="/products/slipstream/overview"><b>SlipStream&reg;</b>: Multi-cloud management platform</a></li>
+            <li><a href="/products/nuvlabox/overview"><b>NuvlaBox&reg;</b>: Cloud-in-a-box appliance</a></li>
           </ul>
           <span></span>
         </li>
