--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -9,22 +9,21 @@
         <div class="main-story nuvlabox">
           <div class="container big">
             <p align="center">
-              <img src="/img/content/nuvlabox-overview.png" alt="NuvlaBox overview" />
-            </p>
+             
           </div>
         </div>
         <div class="container big spacy">
-          <h1>In a nutshell</h1>
+          <h1>What do you get?</h1>
           <div class="row">
             <div class="col-md-4">
-              <h2>Private</h2>
+              <h2>Privacy</h2>
               <p>
                 A private cloud solution ideal for SME/SMB, NGO and small campuses.
               </p>
             </div>
             <div class="col-md-4">
               <h2>
-                  Secure
+                  Security
               </h2>
               <p>
                   All communication encrypted and deployments automated for higher security.
@@ -32,7 +31,7 @@
             </div>
             <div class="col-md-4">
               <h2>
-                  Simple
+                  Simplicity
               </h2>
               <p>
                   Smart factory settings and zero config means it's a child's play to setup and use. 
@@ -40,7 +39,7 @@
             </div>
             <div class="col-md-4">
               <h2>
-                  Connected
+                  Connectivity
               </h2>
               <p>
                   Includes built-in WiFi and dual Ethernet connections. Can also be remote controlled.
@@ -48,7 +47,7 @@
             </div>
             <div class="col-md-4">
               <h2>
-                  Compact
+                  Cost savings
               </h2>
               <p>
                   Replace up to 8 of your servers with an appliance as small as a modem...or 2 Swiss chocolate boxes.
@@ -56,7 +55,7 @@
             </div>
             <div class="col-md-4">
               <h2>
-                  Scalable
+                  Scalability
               </h2>
               <p>
                   Can scale out to remote or public clouds, giving you the simplest ever complete hybrid cloud solution.
@@ -68,7 +67,7 @@
 
       <div class="main-story nuvlabox">
         <div class="container big spacy">
-          <h1 id="who-is-the-nuvlabox-for">Who is the NuvlaBox for?</h1>
+          <h1 id="who-is-the-nuvlabox-for">Who is it for?</h1>
           <div id="enterprise" class="row">
             <div class="col-md-6">
               <h2>
@@ -84,14 +83,19 @@
               </h2>
               <p>
                 Ideal for larger enterprises wishing to federate smaller sites. NuvlaBox can be interconnected to maximise sharing and optimise resource utilisation.
-              </p>
-            </div>
+             
+      </div>
+			 <div class="col-md-6">
+          <h2>
+            Governments and Public Bodies
+          </h2>
+          <p>
+            The NuvlaBox 
+     			 </p>
           </div>
         </div>
       </div>
-
-      {% include overview_usecases.html %}
-
+   </div>
       {% include whats_next.html %}
       {% include footer.html %}
 
