--- a/_includes/slipstream_intro.html
+++ b/_includes/slipstream_intro.html
@@ -1,12 +1,16 @@
 <div class="banner">
-  <div>
+  <!--<div>
     <a href="/jobs/index.html">We're hiring!</a>
-  </div>
+  </div>-->
 </div>
 <div class="jumbotron top_product slipstream">
   <div class="container">
-    <h1>SlipStream</h1>
-    <p>Multi-cloud management platform. Deploy any app in any cloud.</p>
+    <h1>SlipStream®
+	  {% if page.sub %}
+	    - {{ page.sub }}
+      {% endif %}
+	</h1>
+    <p>{{ page.summary }}</p>
 <!--		<p>Sign Up for SlipStream Training Event!</p><a href="http://www.eventbrite.com/e/slipstream-training-hands-on-use-of-a-cloud-management-platform-tickets-16393996886?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=16393996886" alt="Eventbrite - SlipStream Training: hands on use of a cloud management platform" /></a> -->
   </div>
 </div>
