--- a/_includes/slipstream_nav.html
+++ b/_includes/slipstream_nav.html
@@ -10,12 +10,16 @@
     </div>
     <div id="sub-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li id="sub_overview"><a href="/products/slipstream/slipstream.html">Overview</a></li>
-        <li id="sub_usecases"><a href="/products/slipstream/slipstream-usecases.html">Use Cases</a></li>
-        <li id="sub_features"><a href="/products/slipstream/slipstream-features.html">Features</a></li>
-        <li id="sub_techspecs"><a href="/products/slipstream/slipstream-tech.html">Tech Specs</a></li>
+        <li id="sub_overview"><a href="/products/slipstream/overview">Overview</a></li>
+        <li id="sub_paas"><a href="/products/slipstream/paas">PaaS</a></li>
+        <li id="sub_devops"><a href="/products/slipstream/devops">DevOps</a></li>
+        <li id="sub_hybrid"><a href="/products/slipstream/hybrid">Hybrid</a></li>
+        <li id="sub_usecases"><a href="/products/slipstream/usecases">Use Cases</a></li>
+        <li id="sub_features"><a href="/products/slipstream/features">Features</a></li>
+        <li id="sub_techspecs"><a href="/products/slipstream/tech">Tech Specs</a></li>
         <li id="sub_doc"><a href="http://ssdocs.sixsq.com">Documentation</a></li>
-        <li id="tryme_techspecs"><a href="/products/slipstream/slipstream-tryme.html">Try Me</a></li>
+        <li id="sub_install"><a href="/products/slipstream/install">Install</a></li>
+        <li id="tryme_techspecs"><a href="/products/slipstream/tryme">Try Me</a></li>
       </ul>
     </div>
   </div>
