--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -3,11 +3,15 @@ body {
   padding-top: 50px;
 }
 
+h1 {
+	margin-top: 10px;
+}
+
 h1:before { 
   display: block; 
   content: " "; 
-  margin-top: -100px; 
-  height: 100px; 
+/*  margin-top: -100px; 
+  height: 100px; */
   visibility: hidden; 
 }
 
@@ -34,8 +38,8 @@ img {
 .jumbotron {
   padding-left: 0px;
   padding-right: 0px;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   margin-bottom: 0;
 }
 
@@ -200,6 +204,12 @@ div.nuvlabox.odd {
   max-width: 25em;
 }
 
+.row-highlights {
+  background: white;
+  margin: 15px 0;
+  padding: 1px 10px 15px 10px;
+}
+
 .row-summary-slipstream > div > div,
 .row-summary-nuvlabox > div > div {
   background: white;
@@ -210,14 +220,14 @@ div.nuvlabox.odd {
 
 @media (min-width:1200px) { 
   .row-summary-slipstream .col-md-4 > div > div {
-    height: 360px;
+    height: 270px;
     /*background: blue;*/
   }
 }
 
 @media (max-width:1200px) { 
   .row-summary-slipstream .col-md-4 > div > div {
-    height: 410px;
+    height: 340px;
     /*background: white;*/
   }
 }
@@ -238,14 +248,14 @@ div.nuvlabox.odd {
 
 @media (min-width:1200px) { 
   .row-summary-nuvlabox .col-md-4 > div > div {
-    height: 390px;
+    height: 250px;
     /*background: blue;*/
   }
 }
 
 @media (max-width:1200px) { 
   .row-summary-nuvlabox .col-md-4 > div > div {
-    height: 420px;
+    height: 340px;
     /*background: white;*/
   }
 }
@@ -262,4 +272,10 @@ div.nuvlabox.odd {
     height: auto;
     /*background: black;*/
   }
+}
+
+.col-2-image {
+	font-size: 2.5em;
+	align-items: center;
+	color: #CF2121
 }
