--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
 
           <div class="contact_us col-md-4">
             <div>Need information? Give feedback?<br/>Get in touch.</div>
-            <div><a href="/contact.html#contact-us-form">Fill form</a></div>
+            <div><a href="/contact#contact-us-form">Fill form</a></div>
             <div>info/support: +41 22 54 41 733</div>
             <div>
               <a href="mailto:info@sixsq.com">info@sixsq.com</a>
