--- a/_includes/front_personae.html
+++ b/_includes/front_personae.html
@@ -5,7 +5,7 @@
     <p/>
     {% for post in site.categories.personae reversed %}
       <div class="col-md-3" style="padding-top: 60px">
-        <a href="/personae/index.html#{{ post.title }}">
+        <a href="/personae/overview#{{ post.title }}">
           <center>
             <img src="{{ post.icon }}"></img>
             <h2>{{ post.title }}</h2>
