--- a/_includes/media_nav.html
+++ b/_includes/media_nav.html
@@ -10,9 +10,9 @@
     </div>
     <div id="sub-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li id="sub_news"><a href="/news/index.html">News</a></li>
-        <li id="sub_videos"><a href="/videos/index.html">Videos</a></li>
-        <li id="sub_eguide"><a href="/eguides/index.html">eGuides</a></li>
+        <li id="sub_news"><a href="/news">News</a></li>
+        <li id="sub_videos"><a href="/videos">Videos</a></li>
+        <li id="sub_eguide"><a href="/eguides">eGuides</a></li>
       </ul>
     </div>
   </div>
