--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -10,7 +10,7 @@
 
     <div class="banner hidden-xs">
       <div>
-        <a href="/jobs/index.html">We're hiring!</a>
+        <a href="/jobs">We're hiring!</a>
       </div>
     </div>
     <div class="jumbotron">
@@ -35,7 +35,7 @@
                   <li>Your own self-service IT platform or Enterprise App Store</li>
                 </ul>
               </div>
-              <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/slipstream.html">Learn more &raquo;</a></center>
+              <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -55,7 +55,7 @@
                   <li>Add full app deployment to your continuous integration system</li>
                 </ul>
               </div>
-              <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/slipstream-usecases.html#DevOps-platform">Learn more &raquo;</a></center>
+              <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/usecases#DevOps-platform">Learn more &raquo;</a></center>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -75,7 +75,7 @@
                   <li>Use private and public cloud together to reduce costs and increase elasticity</li>
                 </ul>
               </div>
-              <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/slipstream-usecases.html#Hybrid-Cloud-Provisioning">Learn more &raquo;</a></center>
+              <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/usecases#Hybrid-Cloud-Provisioning">Learn more &raquo;</a></center>
             </div>
           </div>
         </div>
@@ -104,7 +104,7 @@
                   <li>Deliver apps and content to your boxes using a number of IP links (e.g. land, satellites, air)</li>
                 </ul>
               </div>
-              <center><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/nuvlabox.html">Learn more &raquo;</a></center>
+              <center><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/overview">Learn more &raquo;</a></center>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -124,7 +124,7 @@
                   <li>Fanless design providing no moving parts increasing robustness and operation  lifespan</li>
                 </ul>
               </div>
-              <center><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/nuvlabox-usecases.html#Field-Operations-with-Agile-Local-Infrastructure">Learn more &raquo;</a></center>
+              <center><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/usecases#Field-Operations-with-Agile-Local-Infrastructure">Learn more &raquo;</a></center>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -144,7 +144,7 @@
                   <li>Deliver apps and content to your boxes using a number of IP links (e.g. land, satellites, air)</li>
                 </ul>
               </div>
-              <center><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/nuvlabox-features.html">Learn more &raquo;</a></center>
+              <center><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/features">Learn more &raquo;</a></center>
             </div>
           </div>
         </div>
@@ -163,7 +163,7 @@
           <div class="col-md-6">
             <h2>We support all mainstream clouds</h2>
             <h3>Can't find your cloud? Get in touch... chances are we're already working on it.</h3>
-            <p style="padding-top: 30px;"><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/slipstream-features.html">Learn more &raquo;</a></p>
+            <p style="padding-top: 30px;"><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/features">Learn more &raquo;</a></p>
           </div>
         </div>
       </div>
