--- a/_includes/customers.html
+++ b/_includes/customers.html
@@ -1,7 +1,7 @@
 <div class="container spacy">
   <h1>Our customers</h1>
   <p>Our customers are large and small system integrators, high-tech companies, institutions and agencies. We value transparent relationships, built on trust and honesty. This approach is valued by our customers and partners, giving us an edge over competition.</p>
-  <a href="/customers/index.html">
+  <a href="/customers/overview">
     <ul id="bxslider" data-call="bxslider" data-options="slideMargin:0, auto:true, autoReload:true" data-breaks="[{screen:0, slides:3, pager:true, controls: false}, {screen:460, slides:4, controls: false}, {screen: 768, slides:8, pager:false, controls: false}]">
 
       <li>
