Changes to slipstream overview

--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -32,6 +32,7 @@
                 <div class="col-md-6 col-2-text">
                     <h2>Cloud Neutrality</h2>
                     <p>SlipStream communicates with all mainstream IaaS cloud services via a connector architecture. This means we're already talking to the cloud you use and will make it easier for you to deploy your apps there. Or if you can't decide which cloud to use, SlipStream takes the stress out of making the wrong decision</p>
+                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
                 </div>
                 <div class="col-md-6 col-2-image">
                     <h1>
@@ -52,6 +53,7 @@
                 <div class="col-md-6 col-2-text">
                     <h2>Scalability</h2>
                     <p>If your private cloud is not giving you all you need, but you don't want to invest in more infrastructure, you can use SlipSteam to scale out to a public cloud and get the best of both worlds.</p>
+                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
                 </div>
             </div>
         </div>
@@ -69,14 +71,43 @@
               <div class="col-md-6 col-2-text">
                   <h2>CIOs struggling to control cloud usage</h2>
                   <p>If your developers are using their own credentials to access cloud services because provisioning applications within  your organisation is too long-winded and time-consuming, then SlipStream is for you.</p>
+                  <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
               </div>
           </div>
           <div id="sme" class="row row-highlights">
               <div class="col-md-6 col-2-text">
                   <h2>Cloud Newbies</h2>
                   <p>If you are considering cloud but don't want to make that big, and possibly expensive, decision of signing up with one cloud provider, SlipStream can give you access to most of the mainstream IaaS providers without being stuck with vendor lock-in.</p>
+                  <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
               </div>
               <div class="col-md-6 col-2-image">
+                  </div>
+                </div>
+                <div id="sme" class="row row-highlights">
+                    <div class="col-md-6 col-2-text">
+                        <h2>Managed Service Providers</h2>
+                        <p>The Managed Services sector represents the largest growing component of the IT market. SlipStream helps MSPs differentiate themselves in this highly competitive environment by allowing them to take advantage of automation and provide a higher level of service without adding cost </p>
+                        <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
+                    </div>
+                    <div class="col-md-6 col-2-image">
+                        </div>
+                      </div>
+                      <div id="sme" class="row row-highlights">
+                          <div class="col-md-6 col-2-text">
+                              <h2>Value Added Resellers</h2>
+                              <p>The shift to cloud services, particularly to “Software as a Service offerings”, has  disrupted the Value-Added Reseller business model. In the cloud era, customers now expect access to their specialized applications without the hassle and cost of running the hardware. SlipStream helps VARs offer that service.</p>
+                              <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
+                          </div>
+                          <div class="col-md-6 col-2-image">
+                              </div>
+                            </div>
+                            <div id="sme" class="row row-highlights">
+                                <div class="col-md-6 col-2-text">
+                                    <h2>IaaS Providers</h2>
+                                    <p>The commoditization of cloud resources has squeezed IaaS service providers forcing them to differentiate their services from their competitors or to live with ever reducing margins. They face increasing competition from cloud service offerings at all levels. SlipStream meets these challenges, providing advanced automation features and significant benefits simplifying the transition from a IaaS provider to a Managed Service Provider..</p>
+                                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
+                                </div>
+                                <div class="col-md-6 col-2-image">
                   <h1>
                       <center>
                           <span class="glyphicon glyphicon-scale"></span>
@@ -98,13 +129,13 @@
                 </div>
                 <div class="col-md-6 col-2-text">
 		            <h2>Sign up for the free SaaS</h2>
-		            <p>SlipStream can be used from the free SaaS. You only pay for the cloud services you consume. This is a good option if your organisation is unsure is happy with the idea of public cloud or don't have much demand for cloud service. Or if you just want to test it out. Signing up takes just a couple of minutes and the user interface is a pleasure. Go ahead, give it a try!</p>
+		            <p>SlipStream can be used for free via the  SaaS. You only pay for the cloud services you consume. This is a good option if your organisation is happy with the idea of public cloud or doesn't have much demand for cloud services. Or if you just want to test it out. Signing up takes just a couple of minutes and the user interface is a pleasure. Go ahead, give it a try!</p>
                 </div>
             </div>
             <div class="row row-highlights">
                 <div class="col-md-6 col-2-text">
 			        <h2>Install it on premise</h2>
-			        <p>If you prefer to install within your own walls, you can buy a SlipStream license. The model can be tailor-made to suit your organisation. This option is best when blah blah.</p>
+			        <p>If you prefer to install SlipStream within your own walls, you can buy an on-premise license. The model can be tailor-made to suit your organisation. This option is best if you need access to support and maintenance, and  to proprietary connectors.</p>
 			    </div>
                 <div class="col-md-6 col-2-image">
                     <h1>
@@ -124,7 +155,7 @@
                 </div>
                 <div class="col-md-6 col-2-text">
 			        <h2>Buy our <src href="/products/nuvlabox">NuvlaBox</src></h2>
-			        <p>If you prefer to install within your own walls, you can buy a SlipStream license. The model can be tailor-made to suit your organisation. This option is best when blah blah.</p>
+			        <p>SlipStream also comes packaged in its own portable appliance, giving you an affordable way to benefit from a private cloud supplied with top class software</p>
 			    </div>
             </div>
           </div>
